      accept both rid and username.
    * Introduce yet another copy of the string_sub function: 
      talloc_string_sub use by AFS token code in winbindd.
    * BUG 3351: pdb_mysql again overwrites password fields.
    * BUG 3384: Fix segv in tdbtool.
    * Use the same CFLAGS for generating the pch as we use to 
      actually compile.
    * Correct typo when compiling the vfs_catia module.


o   Derrell Lipman <derrell@samba.org>
    [libsmbclient]
    * Fix parsing of file times (w_time and m_time were reversed).
    * Add additional libsmbclient test programs.
    * BUG 3336: Load networks interfaces in libsmbcliebt after parsing 
      the configuration files.
    * Avoid doing a NetBIOS name query for each server and workgroup 
      enumeration call.
    * Do not open connection when only looking for cached connection.
    * BUG 2651: Add option to log debug messages to stderr instead 
      of stdout.
    * Added flag to not request authentication information.
    * Enhancements to smbwrapper example code.
    * Replace smbwrapper call to dlopen(/lib/libc...) with direct 
      use of RTLD_NEXT.


o   David May <mayd@cygnus.uwa.edu.au>
    * BUG 3329: Shell scripting portability fixes on 'make test'.


o   Tony Mountifield <tony@softins.co.uk>
    * BUG 3327: fix bad access to gencache.tdb after fork() in 
      smbmount.


o   Lars Müller <lmuelle@samba.org>
    * BUG 3264: Support backwards compatible setups using 
      'idmap backend = idmap_rid'.
    * Add %w macro for the winbind separator.
    * Convert net command to use stderr for error messages rather 
      than stdout.


o   James Peach <jpeach@sgi.com>
    * Portability fixes in LDAP code.  Don't use non-static array 
      initializers.
    * Support the TCP_FASTACK socket option if it is available. 
    * Tell the MIPSPro compiler to push DEBUG calls out of line.


o   Makr Proehl <m.proehl@science-computing.de>
    * BUG 1336: Print the server role when calling testparm in 